# Melanoma-Detection-with-Knowledge-Distillation

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Milestone I.docx  QUICKSTART.md  README.md  pyproject.toml
artifacts/configs/: baseline_training.yaml
artifacts/docs/: consulting_presentation.md  readme.md  run_summary.md  scoring_presentations.xlsx  ~$scoring_presentations.xlsx
artifacts/imgs/: kd_ablation_summary.json
artifacts/tbls/: evaluation_results.csv  evaluation_results.json  run_summary.csv  run_summary.json  sklearn_baselines.csv  sklearn_baselines.json
configs/experiments/: baseline.yaml  wandb_example.yaml
data/: README.md
data/processed/: .gitkeep  split_metadata.json
data/raw/: .gitkeep
docs/: CONTRIBUTING.md  GETTING_STARTED.md  RESEARCH_NOTES.md  WANDB_GUIDE.md  literature review for milestone2.docx  read_angie.md  readme.md  research_starter.md  ~$gie_milestone_draft.docx
models/checkpoints/: student_T1.0_alpha0.5_best_meta.json  student_T1.0_alpha0.9_best_meta.json  student_T2.0_alpha0.5_best_meta.json  student_T2.0_alpha0.9_best_meta.json  teacher_efficientnet_b0_focal_best_meta.json  teacher_efficientnet_b1_focal_best_meta.json  teacher_efficientnet_b2_focal_best_meta.json  teacher_efficientnet_b3_focal_best_meta.json  teacher_efficientnet_b4_focal_best_meta.json  teacher_efficientnet_b5_focal_best_meta.json  teacher_efficientnet_b6_focal_best_meta.json  teacher_efficientnet_b7_focal_best_meta.json  teacher_resnet101_focal_best_meta.json  teacher_resnet152_focal_best_meta.json  teacher_resnet18_focal_best_meta.json  teacher_resnet34_focal_best_meta.json  teacher_resnet50_focal_best_meta.json
notebooks/: 00_eda.ipynb  01_benchmarks.ipynb
notebooks/exploratory/: 00_example_eda.ipynb
results/figures/: .gitkeep
scripts/: download_data.sh  download_efficient_net_models.py  download_models.sh  download_unnet.py  evaluate_models.py  quantize_model.py  run_kd_ablation.py  setup_environment.sh  sklearn_baselines.py  summarize_runs.py  train_lightning.py  train_student.py  train_teacher.py
src/: __init__.py  config.py  utils.py
src/data/: __init__.py  build_data.py  dataset.py  download_from_torchhub.py  reporting_baselines.py  splits.py
src/models/: __init__.py  (+4 more)
tests/: __init__.py  test_core.py  test_models.py  test_utils.py
(+82 files in other folders)
